added models, controller, dto, modified api
