# src/main/java/com/sittingspot/sittingspotdatalayer/DTO/SittingSpotOutDTO.java
@@ -1,0 +1,15 @@
+package com.sittingspot.sittingspotdatalayer.DTO;
+
+import com.sittingspot.sittingspotdatalayer.models.Location;
+import com.sittingspot.sittingspotdatalayer.models.Tag;
+
+import java.io.Serializable;
+import java.util.List;
+import java.util.UUID;
+
+/**
+ * DTO for {@link com.sittingspot.sittingspotdatalayer.models.SittingSpot}
+ */
+public record SittingSpotOutDTO(UUID id, Location location, List<Tag> tags,
+                                List<String> labels) implements Serializable {
+}
