# src/main/java/com/sittingspot/sittingspotdatalayer/models/Area.java
@@ -1,0 +1,4 @@
+package com.sittingspot.sittingspotdatalayer.models;
+
+public record Area(Location center, double range) {
+}
