# src/main/java/com/sittingspot/sittingspotdatalayer/models/Tag.java
@@ -1,0 +1,7 @@
+package com.sittingspot.sittingspotdatalayer.models;
+
+import jakarta.persistence.Embeddable;
+
+@Embeddable
+public record Tag(String key, String value) {
+}
